[gd_scene load_steps=4 format=3 uid="uid://cvyca2p1xw30e"]

[ext_resource type="Script" path="res://campfire/campfire.gd" id="1_r4xlk"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_teg8h"]
load_path = "res://.godot/imported/map icon sprite sheet.png-ec2fe835a039701db9312c1660aa10bb.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_u6fwq"]
atlas = SubResource("CompressedTexture2D_teg8h")
region = Rect2(105, 0, 36, 36)

[node name="Campfire" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r4xlk")
upgrade_path = "res://campfire/proficiency_upgrade.tscn"

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_u6fwq")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
text = "You May Only Choose 1"
horizontal_alignment = 1

[node name="HBocContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HealButton" type="Button" parent="MarginContainer/VBoxContainer/HBocContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Recover 15 Health"

[node name="UpgradeDieButton" type="Button" parent="MarginContainer/VBoxContainer/HBocContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
theme_override_colors/font_color = Color(0, 0, 1, 1)
text = "Upgrade A Die"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBocContainer/HealButton" to="." method="_on_heal_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBocContainer/UpgradeDieButton" to="." method="_on_upgrade_die_button_pressed"]
